Change mobile dropdown to div

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,8 @@
     --arena-width: 90vw;
     --body-margin-top: 40px;
     --dot-size: 16px;
+    --dropdown-min-width: 200px;
+    --dropdown-padding: 10px;
     --lane-label-margin-top: 5px;
     --lane-row-2-margin: 25px;
     --lane-min-height-mobile: 55px;
@@ -117,20 +119,48 @@ body {
   padding-top: 0; /* Remove top padding for the first heading */
 }
 
-#nav-selector {
+.dropdown {
   display: none;
-  margin: 0;
-  margin: var(--padding-horizontal);
-  text-align: center;
-  font-family: var(--nav-panel-body-font);
-  font-size: 1em;
-  
 }
 
 @media screen and (max-width: 768px) {
-  #nav-selector {
-    display: inline;
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-bottom: var(--padding-horizontal);
   }
+}
+
+.dropdown-btn {
+  background-color: var(--title-bar-color);
+  color: white;
+  padding: var(--dropdown-padding);
+  font-size: 1em;
+  font-family: var(--nav-panel-body-font);
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: var(--nav-panel-color);
+  min-width: var(--dropdown-min-width);
+  z-index: 1; /* ensures dropdown menu is above arena */
+}
+
+.dropdown-menu .dropdown-item {
+  padding: var(--dropdown-padding);
+  cursor: pointer;
+}
+
+.dropdown-menu .dropdown-item:hover {
+  background-color: var(--nav-panel-hover-color);
+}
+
+.dropdown-heading {
+  padding: var(--dropdown-padding);
+  font-weight: bold;
 }
 
 #arena-container {
@@ -146,7 +176,6 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
   width: 100%;
   height: var(--arena-default-height);
   border: none;
@@ -181,7 +210,6 @@ body {
 .lane-label {
   padding-left: var(--padding-horizontal);
   color: var(--arena-text-color);
-  font-weight: bold;
   font-family: var(--lane-label-font);
   font-size: var(--arena-font-size);
 }
@@ -211,7 +239,6 @@ body {
 .total-time-label {
   position: absolute;
   color: var(--arena-text-color);
-  font-weight: bold;
   font-family: var(--time-label-font);
   font-size: var(--arena-font-size);
 }
